# project-aegis

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  EXTERNAL_AUDIT_PACKAGE.md  INCIDENT_RESPONSE_PLAYBOOK.md  README.md  SPRINTS_DNS.md  WHITEPAPER.md  deploy-all-devnet.sh  deploy-mainnet.sh  test-all.sh  test-localnet.sh  verify-mainnet.sh
.github/workflows/: performance.yml
cli/: Cargo.toml  calculate_discriminators.rs
cli/src/: config.rs  contracts.rs  errors.rs  main.rs  wallet.rs
cli/src/commands/: balance.rs  claim_rewards.rs  dns.rs  execute_unstake.rs  metrics.rs  mod.rs  register.rs  stake.rs  status.rs  unstake.rs
cli/tests/: contracts_integration_test.rs  e2e_user_flows_test.rs  integration_tests.rs  metrics_command_test.rs
contracts/dao/: Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
contracts/dao/programs/dao/: Cargo.toml
contracts/dao/programs/dao/src/: lib.rs
contracts/dao/tests/: dao.ts
contracts/docs/: AUDIT_PREPARATION.md
contracts/registry/: Anchor.toml  package-lock.json
contracts/registry/tests/: node-registry.ts  security-tests.ts
contracts/rewards/: Anchor.toml  package-lock.json  package.json
contracts/rewards/tests/: rewards.ts
contracts/staking/: .prettierignore  Anchor.toml  package-lock.json
contracts/staking/programs/staking/: Cargo.toml
contracts/staking/programs/staking/src/: lib.rs
contracts/staking/tests/: security-tests.ts  staking.ts
contracts/token/: Anchor.toml  package-lock.json  package.json
contracts/token/tests/: advanced-scenarios.ts  aegis-token.ts
docs/: ACCEPTANCE1-6.md  ACCEPTANCE1-7.md  AEGIS-VS-CLOUDFLARE-ANALYSIS.md  Building a Cloudflare Clone.md  CARGO_AUDIT_REPORT.md  CLI-INTEGRATION-GUIDE.md  COMPREHENSIVE-REVIEW-SPRINTS-1-6.md  CONTRACT-OWNERSHIP.md  DNS-COMPLETION-REPORT.md  FINAL-SESSION-SUMMARY-NOV-20-2025.md  GAP-COMPLETION-SUMMARY.md  INSTALL.md  JS-CHALLENGE-INTEGRATION.md  LINUX_TESTING.md  NEW-CLI-TESTS-SUMMARY.md  PHASE-1-FINAL-SUMMARY.md  PROGRESS.md  PROJECT-STATUS-CURRENT.md  Product Requirements Document (PRD) AEGIS.md  Project Plan Document - Aegis.md  REMAINING-ITEMS-SPRINTS-1-5.md  SECURITY-FIXES-CRITICAL.md  SECURITY-PATCHES-IMPLEMENTED.md  SECURITY-REMEDIATION-SPRINTS-Y.md  SECURITY-REMEDIATION-SPRINTS.md  SECURITY.md  SESSION-SUMMARY-NOV-20-2025.md  SOLANA-AUDIT-REQUEST.md  SPRINT-1-4-REVIEW.md  SPRINT-10-COMPLETE.md  SPRINT-11-COMPLETE.md  SPRINT-12-COMPLETE.md  SPRINT-12.5-COMPLETE.md  SPRINT-13-COMPLETE.md  SPRINT-13-DESIGN.md  SPRINT-13.5-COMPLETE.md  SPRINT-18-DAO-GOVERNANCE.md  SPRINT-25-30-PLAN.md  SPRINT-28-SECURITY-AUDIT.md  SPRINT-4-GAP-RESOLVED.md  (+16 more)
docs/security/: AUDIT-OUTREACH-EMAILS.md  BUG-BOUNTY-PROGRAM.md  HARDENING-CHECKLIST.md  INCIDENT-RESPONSE-PLAYBOOK.md  SECURITY-ARCHITECTURE.md  SECURITY_REVIEW_2025-12-02.md  SECURITY_REVIEW_2025-12-03.md  VULNERABILITY-DISCLOSURE-POLICY.md
docs/sprints/: SPRINT-1-SETUP.md  SPRINT-1-SUMMARY.md  SPRINT-3-SUMMARY.md
node/: Cargo.toml  Makefile  SECURITY_FIXES_SUMMARY.md  TODO_LINUX.md  bot-config.toml  bot-detector.wasm  bot-policy.toml  config.example.toml  ebpf-config.toml  pingora-config.toml  proxy-config.toml  test-config.toml  test-syn-flood.sh
node/benches/: performance.rs
node/config/: routes.example.yaml
node/docs/: GAME_DAY_RESULTS.md  LINUX_TESTING.md  PERFORMANCE_BASELINE.md
node/ebpf/syn-flood-filter/: Cargo.toml
node/ebpf/syn-flood-filter/src/: main.rs
node/examples/: distributed_rate_limit_demo.rs
node/fuzz/: Cargo.toml
node/fuzz/fuzz_targets/: fuzz_cache_key.rs  fuzz_route_config.rs  fuzz_tls_parser.rs  fuzz_waf.rs  fuzz_wasm_loader.rs
node/k6/: README.md  load-test.js  mock-origin.js  quick-test.js  soak-test.js  stress-test.js
node/scripts/: profile-run.sh
node/src/: acme.rs  api_security.rs  behavioral_analysis.rs  blocklist_persistence.rs  bot_management.rs  cache.rs  cdn_commands.rs  challenge.rs  challenge_api.rs  config.rs  ddos_api.rs  ddos_manager.rs  ddos_policy.rs  ddos_stats.rs  distributed_counter.rs  distributed_enforcement.rs  distributed_rate_limiter.rs  ebpf_loader.rs  enhanced_bot_detection.rs  fingerprint_cache.rs  ip_extraction.rs  ipfs_client.rs  lib.rs  lock_utils.rs  main.rs  main_cdn.rs  main_dns.rs  main_ebpf.rs  main_pingora.rs  main_proxy.rs  main_threat_intel.rs  metrics.rs  module_dispatcher.rs  nats_sync.rs  pingora_proxy.rs  proxy.rs  route_config.rs  server.rs  threat_intel_p2p.rs  threat_intel_service.rs  (+7 more)
node/src/dns/: dns_account.rs  dns_api.rs  dns_config.rs  dns_metering.rs  dns_persistence.rs  dns_server.rs  dns_types.rs  dnssec.rs  dnssec_keys.rs  doh_server.rs  dot_server.rs  edge_registry.rs  geo_resolver.rs  health_checker.rs  mod.rs  rate_limiter.rs  zone_store.rs
node/tests/: bot_management_test.rs  cache_integration_test.rs  captcha_test.rs  ebpf_loader_test.rs  edge_function_test.rs  game_day.rs  integration_test.rs  metrics_integration_test.rs  proxy_test.rs  security_audit_fixes.rs  security_fixes_test.rs  server_metrics_test.rs  sprint_12_5_test.rs  sprint_13_5_test.rs  sprint_15_integration_test.rs  sprint_16_route_dispatch_test.rs  sprint_17_ipfs_integration_test.rs  sprint_19_tls_fingerprint_test.rs  threat_intel_integration_test.rs  waf_integration_test.rs  wasm_runtime_test.rs
node/wasm-modules/bot-detector/: Cargo.toml
node/wasm-modules/bot-detector/src/: lib.rs
ops/: README.md
ops/acme/: README.md  cert-manager.yaml
ops/bgp/: README.md  bird.conf  check-health.sh
ops/cilium/: ebpf-programs.yaml  install.yaml
ops/flux/: README.md  apps.yaml  flagger-canary.yaml  git-repository.yaml  infrastructure.yaml
ops/k3s/: dragonfly.yaml  namespace.yaml  river-proxy.yaml
ops/peering/: README.md  example-peer.yaml  generate.py
wasm-edge-function-example/: Cargo.toml  README.md  build.sh
wasm-edge-function-example/src/: lib.rs
wasm-waf/: Cargo.toml
wasm-waf/src/: lib.rs
website/: README.md  WEBSITE-UPDATE-SUMMARY.md  captcha-demo.html  index.html  robots.txt  sitemap.xml
website/css/: style.css
website/js/: aegis-captcha.js  main.js
(+27 files in other folders)
