[package]
name = "aegis-cli"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Team"]
description = "CLI tool for AEGIS node operators - register nodes, stake tokens, claim rewards"

[[bin]]
name = "aegis-cli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Solana dependencies
solana-sdk = "2.3"
solana-client = "2.3"
anchor-client = "0.32"
anchor-lang = "0.32"
anchor-spl = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Terminal UI
colored = "2.1"
indicatif = "0.17"

# Utilities
dirs = "5.0"
bs58 = "0.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.12"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
