[package]
name = "aegis-node"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Team"]
description = "AEGIS decentralized edge node - Sprint 1 HTTP server proof-of-concept"

[dependencies]
# Pingora from git main (latest fixes)
pingora = { git = "https://github.com/cloudflare/pingora", features = ["lb", "openssl"] }
pingora-core = { git = "https://github.com/cloudflare/pingora" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora" }
pingora-load-balancing = { git = "https://github.com/cloudflare/pingora" }

# HTTP fallback
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# Utilities
async-trait = "0.1"
futures = "0.3"

# Cache - Redis/DragonflyDB client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# System metrics
sysinfo = "0.30"

# eBPF/XDP (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
nix = { version = "0.29", features = ["user"] }
ctrlc = "3.4"

[[bin]]
name = "aegis-node"
path = "src/main.rs"

[[bin]]
name = "aegis-proxy"
path = "src/main_proxy.rs"

[[bin]]
name = "aegis-pingora"
path = "src/main_pingora.rs"

[[bin]]
name = "aegis-ebpf-loader"
path = "src/main_ebpf.rs"
required-features = []
