[package]
name = "aegis-node"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Team"]
description = "AEGIS decentralized edge node - Sprint 1 HTTP server proof-of-concept"

[dependencies]
# Pingora from git main (latest fixes)
pingora = { git = "https://github.com/cloudflare/pingora", features = ["lb", "openssl"] }
pingora-core = { git = "https://github.com/cloudflare/pingora" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora" }
pingora-load-balancing = { git = "https://github.com/cloudflare/pingora" }

# HTTP fallback
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"  # YAML parsing for route configurations

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# Utilities
async-trait = "0.1"
futures = "0.3"
regex = "1.10"
url = "2.5"  # URL parsing for query parameters
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
colored = "2.1"  # Terminal color output

# Cache - Redis/DragonflyDB client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# System metrics
sysinfo = "0.30"

# WebAssembly runtime for bot management (Sprint 9)
wasmtime = "27.0"

# P2P Networking for threat intelligence (Sprint 10)
libp2p = { version = "0.54", features = ["gossipsub", "mdns", "noise", "tcp", "tokio", "yamux", "kad", "identify", "macros"] }

# Distributed State Sync (Sprint 11)
async-nats = "0.36"  # NATS JetStream client
crdts = "7.3"  # CRDT implementations (G-Counter, PN-Counter, etc.)
bincode = "1.3"  # Efficient binary serialization for CRDT state
num-traits = "0.2"  # Numeric trait conversions for BigUint

# Verifiable Analytics (Sprint 12)
ed25519-dalek = "2.1"  # Ed25519 cryptographic signatures
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite for metric storage
base64 = "0.22"  # Base64 encoding for signatures
hex = "0.4"  # Hex encoding utilities
rand = "0.8"  # Random number generation for key generation

# eBPF/XDP (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
nix = { version = "0.29", features = ["user"] }
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.10"  # Temporary file/directory creation for tests
wat = "1.0"  # WAT to Wasm conversion for testing

[[bin]]
name = "aegis-node"
path = "src/main.rs"

[[bin]]
name = "aegis-proxy"
path = "src/main_proxy.rs"

[[bin]]
name = "aegis-pingora"
path = "src/main_pingora.rs"

[[bin]]
name = "aegis-ebpf-loader"
path = "src/main_ebpf.rs"
required-features = []

[[bin]]
name = "aegis-threat-intel"
path = "src/main_threat_intel.rs"
required-features = []
