[package]
name = "aegis-node"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Team"]
description = "AEGIS decentralized edge node - Sprint 1 HTTP server proof-of-concept"

[dependencies]
# Pingora from git main (latest fixes)
pingora = { git = "https://github.com/cloudflare/pingora", features = ["lb", "openssl"] }
pingora-core = { git = "https://github.com/cloudflare/pingora" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora" }
pingora-load-balancing = { git = "https://github.com/cloudflare/pingora" }

# HTTP fallback
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"  # YAML parsing for route configurations

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# Utilities
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"  # Async stream utilities for SSE
regex = "1.10"
url = "2.5"  # URL parsing for query parameters
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
colored = "2.1"  # Terminal color output
once_cell = "1.19"  # Lazy static initialization (X3.1 security fix)
lru = "0.12"  # LRU cache for bounded HashMap growth (X3.2 security fix)

# Cache - Redis/DragonflyDB client
# Note: Staying on 0.24 due to API changes in newer versions requiring refactoring
# The future-incompatibility warning is tracked but not a breaking issue yet
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# System metrics
sysinfo = "0.30"

# WebAssembly runtime for bot management (Sprint 9)
# SECURITY FIX (X4.11): Upgraded from 27.0 to 39.0 for security patches
wasmtime = "39.0"

# P2P Networking for threat intelligence (Sprint 10)
libp2p = { version = "0.54", features = ["gossipsub", "mdns", "noise", "tcp", "tokio", "yamux", "kad", "identify", "macros"] }

# Distributed State Sync (Sprint 11)
async-nats = "0.36"  # NATS JetStream client
nkeys = "0.4"  # NATS NKey authentication (Y1.4)
crdts = "7.3"  # CRDT implementations (G-Counter, PN-Counter, etc.)
bincode = "1.3"  # Efficient binary serialization for CRDT state
num-traits = "0.2"  # Numeric trait conversions for BigUint

# Verifiable Analytics (Sprint 12)
ed25519-dalek = "2.1"  # Ed25519 cryptographic signatures
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite for metric storage
base64 = "0.22"  # Base64 encoding for signatures
hex = "0.4"  # Hex encoding utilities
rand = "0.8"  # Random number generation for key generation

# IPFS/Filecoin Integration (Sprint 17)
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls"] }  # IPFS HTTP API client
sha2 = "0.10"  # SHA-256 hashing for CID verification
# Security Fix (X1.2): CID integrity verification
cid = "0.11"  # CID parsing and validation
multihash = "0.19"  # Multihash computation

# TLS Fingerprinting (Sprint 19)
md5 = "0.7"  # MD5 hashing for JA3 fingerprint computation
urlencoding = "2.1.3"
ring = "0.17.14"
subtle = "2.6.1"
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory clearing for secrets (X3.6)

# DNS Infrastructure (Sprint 30)
# Note: Using 0.25.x for stability. TLS features (DoT/DoH) will be added in Sprint 30.5
hickory-server = { version = "0.25", features = ["dnssec-ring"] }
hickory-proto = "0.25"
hickory-resolver = "0.25"

# GeoIP Database for geo-aware DNS (Sprint 30.3)
# Optional: Only needed if using MaxMind GeoLite2 database
maxminddb = { version = "0.24", optional = true }

# eBPF/XDP (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
nix = { version = "0.29", features = ["user"] }
ctrlc = "3.4"

# SECURITY FIX (X2.2): Feature flags for development vs production
[features]
default = []
# Enable this feature ONLY for local development - allows loading unsigned Wasm modules
# WARNING: Never enable this in production builds!
dev_unsigned_modules = []
# Enable MaxMind GeoIP database support for geo-aware DNS resolution
geoip = ["maxminddb"]

[dev-dependencies]
tempfile = "3.10"  # Temporary file/directory creation for tests
wat = "1.0"  # WAT to Wasm conversion for testing
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"  # Y10.4: Property-based testing for CRDTs

[[bench]]
name = "performance"
harness = false

[[bin]]
name = "aegis-node"
path = "src/main.rs"

[[bin]]
name = "aegis-proxy"
path = "src/main_proxy.rs"

[[bin]]
name = "aegis-pingora"
path = "src/main_pingora.rs"

[[bin]]
name = "aegis-ebpf-loader"
path = "src/main_ebpf.rs"
required-features = []

[[bin]]
name = "aegis-threat-intel"
path = "src/main_threat_intel.rs"
required-features = []

[[bin]]
name = "aegis-cdn"
path = "src/main_cdn.rs"

[[bin]]
name = "aegis-dns"
path = "src/main_dns.rs"

# Security notes:
# - RUSTSEC-2024-0437 (protobuf): Transitive via prometheus 0.13 → pingora-core
#   Upstream fix: https://github.com/cloudflare/pingora/pull/708
#   Risk: Low (protobuf only used for prometheus push gateway text format, not exposed to untrusted input)
