[package]
name = "aegis-edge-function-example"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Team"]
description = "Example edge function demonstrating cache and HTTP access"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip symbols
