[package]
name = "dao"
version = "0.1.0"
description = "AEGIS DAO governance program for proposals, voting, and treasury management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
